--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,7 +1,10 @@
-img {
-    width: 500px;
+.bg-default-image {
+    background-image: url("images/default.jpg");
+    background-size: 100%;
+    height: 150px;
+    text-shadow:2px 2px 8px #000;
 }
 
-body {
-    background-color: red !important;
+.logo {
+    text-shadow: 2px 2px navy;
 }
