--- a/client/public/css/styles.css
+++ b/client/public/css/styles.css
@@ -1,5 +1,5 @@
 .bg-default-image {
-    background-image: url("images/default.jpg");
+    background-image: url("/images/default.jpg");
     background-size: 100%;
     height: 150px;
     text-shadow:2px 2px 8px #000;
